--- a/Source/src/main/webapp/template/web/css/introduction-component.css
+++ b/Source/src/main/webapp/template/web/css/introduction-component.css
@@ -8,7 +8,7 @@
 }
 
 .backdrop {
-    background-image: url(../images/BK_IH.png);
+    background-image: url(../images/background.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 }
