Fix lỗi read-only comment

--- a/Source/src/main/webapp/template/web/css/home.css
+++ b/Source/src/main/webapp/template/web/css/home.css
@@ -671,3 +671,6 @@ a:not([href]):not([tabindex]), .text-decoration-non {
     color: #000;
     text-shadow: 0 0 5px #09f;
 }
+.readonly {
+    pointer-events: none;
+}
